--- a/css/desktop.css
+++ b/css/desktop.css
@@ -164,4 +164,19 @@
     .customers_item{
         width: calc((100% - 120px) / 6)
     }
+
+    .footer_section{
+        padding: 100px 0;
+    }
+    .footer_flex_container{
+        display: flex;
+        flex-direction: row;
+    }
+    .footer_tablet_container{
+        flex-direction: row;
+        text-align: start;
+    }
+    .footer_item{
+        text-align-last: start;
+    }
 }
