--- a/css/style.css
+++ b/css/style.css
@@ -34,12 +34,13 @@ button{
     cursor:pointer;
 }
 body{
+    margin: 0;
     font-family: 'Roboto', sans-serif;
     color: var(--main-color);
     background-color: var(--body-color);
 }
 .container{
-    width: 100%;
+    max-width: 320px;
     margin: 0 auto;
     padding: 0 16px;
 }
@@ -437,7 +438,12 @@ body{
 }
 .footer_flex_container{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    gap: 72px;
+}
+.footer_tablet_container{
+    display: flex;
+    flex-direction: column;
     gap: 72px;
 }
 .subscribe {
@@ -448,11 +454,13 @@ body{
 .subscribe_form{
     display: flex;
     flex-direction: column;
+    align-items:center;
     gap: 16px;
+    height: 40px;
 }
 .email{
-    width: 100%;
-    height: 40px;
+    width: 398px;
+    height: auto;
     font-weight: 400;
     font-size: 12px;
     line-height: 2;
