--- a/css/tablet.css
+++ b/css/tablet.css
@@ -1,8 +1,10 @@
 @media screen and (min-width: 768px) and (max-width: 1199px) {
     .container{
-        max-width: 736px;
+        max-width: 552px;
     }
-
+    body{
+        margin: 0;
+    }
     /* ======= HEADER ======== */
     .header{
         padding-top: 24px;
@@ -51,7 +53,7 @@
     }
     /* Features */
     .features_container{
-        width: 736px;
+        min-width: 736px;
     }
     .features_list{
         flex-direction: row;
@@ -94,16 +96,36 @@
     /* ============= FOOTER ================== */
 
     .footer{
-        padding: 96px 15px;
+        padding: 96px 0;
     }
-
-    .footer_flex_container{
+    .footer_logo_container{
+        align-items: start;
+    }
+    .footer_tablet_container{
         display: flex;
-        flex-wrap: wrap;
-        column-gap: 24px;
-        row-gap: 72px;
+        flex-direction: row;
+        gap: 24px;
     }
-    .footer_item{
-        width: calc((100% - 24px) / 2);
+    .footer_description{
+        text-align: start;
+    }
+    .footer_logo{
+        padding: 0;
+    }
+    .footer_subscribe{
+        text-align: left;
+    }
+    .social_media{
+        align-items:start;
+    }
+    .subscribe{
+        width: 453px;
+        height: 80px;
+        align-items:left;
+    }
+    .subscribe_form{
+        display: flex;
+        flex-direction: row;
+        height: 40px;
     }
 }
