--- a/css/desktop.css
+++ b/css/desktop.css
@@ -174,9 +174,39 @@
     }
     .footer_tablet_container{
         flex-direction: row;
-        text-align: start;
     }
-    .footer_item{
-        text-align-last: start;
+    .footer_subscribe{
+        text-align: left;
+    }
+    .email{
+        width: 264px;
+        height: 40px;
+        padding-left: 16px;
+        padding-top: 8px;
+        padding-bottom: 8px;
+        margin-right: 24px;
+        color: rgba(255, 255, 255, 0.6);
+        border: 1px solid rgba(255, 255, 255, 0.3);
+        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+        border-radius: 4px;
+        background-color: var(--main-color);
+    }
+    .email::placeholder{
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 2;
+        letter-spacing: 0.04em;
+        color: rgba(255, 255, 255, 0.6);
+    }
+    .subscribe_form{
+        display: flex;
+    }
+    .subscribe_button{
+        display: flex;
+        padding: 8px 24px;
+        border: 0;
+        border-radius: 4px;
+        background-color: var(--noactive-btn);
+        color: var(--body-color);
     }
 }
