--- a/css/style.css
+++ b/css/style.css
@@ -615,8 +615,8 @@ body{
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 392px;
-    min-height: 586px;
+    width: 100%;
+    height: auto;
     transform: scale(1) translate(-50%, -50%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     background-color: #FCFCFC;
